# sweech

./: Cargo.toml
sweech-axum/: Cargo.toml
sweech-axum/src/: applet.rs  extractor.rs  lib.rs  middleware.rs  router.rs
sweech-axum/tests/: monolith.rs  pipeline.rs
sweech-cli/: Cargo.toml
sweech-cli/src/: config.rs  main.rs  manifest.rs  scanner.rs  templates.rs  type_gen.rs  validator.rs
sweech-cli/src/commands/: add.rs  build.rs  check.rs  config.rs  dev.rs  generate.rs  init.rs  mod.rs
sweech-cli/tests/: scaffolding.rs
sweech-core/: Cargo.toml
sweech-core/src/: auth.rs  context.rs  error.rs  handler.rs  lib.rs  response.rs
