[package]
name = "sweech-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sweech"
path = "src/main.rs"

[dependencies]
sweech-core = { path = "../sweech-core" }
clap = { version = "4.4.18", features = ["derive"] }
toml = "0.5.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
colored = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3.10.1"
