[package]
name = "sweech-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# async runtime — like Node's event loop but built into the language ecosystem
tokio = { version = "1", features = ["full"] }

# serialization — turning structs into JSON and back
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# async traits — Rust needs a helper crate for async functions in traits (explained below)
async-trait = "0.1"

# HTTP status codes — so we don't hardcode numbers
http = "1"
